hungrycat (0.4) UNRELEASED; urgency=low

  * 

 -- Jakub Wilk <jwilk@jwilk.net>  Sun, 13 Mar 2016 18:38:00 +0100

hungrycat (0.3.3) unstable; urgency=low

  * Improve error handling.
  * Fix file descriptor leak when the -PP option was enabled.

 -- Jakub Wilk <jwilk@jwilk.net>  Thu, 01 Jan 2015 00:02:12 +0100

hungrycat (0.3.2) unstable; urgency=low

  * Improve error handling.
  * Improve the build system:
    + Fix “make clean” and “make distclean” to remove *.pyc/*.pyo files.

 -- Jakub Wilk <jwilk@jwilk.net>  Mon, 25 Nov 2013 08:25:32 +0100

hungrycat (0.3.1) unstable; urgency=low

  * Improve the build system:
    + Fix “make clean” and “make distclean” to remove all the files they
      should.
    + Add “install” target to the makefile.
    + Build documentation only if rst2man is available.
    + Enable C99 compatibility more portably.
    + Enable warnings more portably.
    + Port the configure script to Autoconf ≥ 2.61.
  * Improve the manual page, as per man-pages(7) recommendations:
    + Remove the “AUTHOR” section.
    + Add references to cat(1), rm(1), truncate(1), ftruncate(2), and
      fallocate(2) manpages.
  * Fix a type mismatch on 64-bit architectures.
  * Make the test runner compatible with Python 3.X.

 -- Jakub Wilk <jwilk@jwilk.net>  Tue, 11 Jun 2013 23:59:32 +0200

hungrycat (0.3) unstable; urgency=low

  * Improve error handling.
  * Add option for using fallocate() with FALLOC_FL_PUNCH_HOLE.
  * Fix wrong output when input file was not larger than (2 × buffer size).

 -- Jakub Wilk <jwilk@jwilk.net>  Fri, 09 Mar 2012 01:23:00 +0100

hungrycat (0.2) unstable; urgency=low

  * Relicense to the Expat license.
  * Improve error handling.

 -- Jakub Wilk <jwilk@jwilk.net>  Thu, 11 Nov 2010 23:28:22 +0100

hungrycat (0.1) unstable; urgency=low

  * Initial release.

 -- Jakub Wilk <jwilk@jwilk.net>  Thu, 03 Dec 2009 09:31:48 +0100